@@ -446,6 +446,7 @@ AC_CHECK_FUNCS(vasprintf)
 AC_CHECK_FUNCS(asprintf)
 AC_CHECK_FUNCS(vsnprintf)
 AC_CHECK_FUNCS(hstrerror)
+AC_CHECK_FUNCS(atoll)
 
 dnl Check if we want to compile everything with static
 AC_ARG_ENABLE(static,[
