@@ -1,5 +1,6 @@
 Changes for 1.1beta9:
 
+ - fix compilation if no function atoll() (Alexei)
  - fixed compilation issue in run_command() (Alexei)
  - added vertical text for OVERVIEW (Eugene)
  - fixed items status changing of parent hosts (Eugene)
